Fixed table overlap when small width

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,10 @@
   content: "";
 }
 
+.react-bootstrap-table {
+  display: block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
